# bazel

./: .bazelignore  .bazelrc  .clangd  .gitignore  BUILD.bazel  MODULE.bazel  flake.nix  workspace.json
modules/: cpp.MODULE.bazel  go.MODULE.bazel  jvm.MODULE.bazel  rust.MODULE.bazel
scripts/: generate_workspace_json.py  kls-classpath
src/: BUILD.bazel  image.bzl  main.cpp  main_test.cpp
src/main/cpp/: main.cpp
src/main/go/: BUILD.bazel  main.go
src/main/java/: BUILD.bazel
src/main/java/com/example/: BUILD.bazel  Main.java  QuarkusApp.java
src/main/java/resources/: application.properties
src/main/kotlin/: BUILD.bazel
src/main/kotlin/com/example/: Hello.kt
src/main/resources/: BUILD.bazel
src/main/rust/: BUILD.bazel  main.rs
sysroot/: generate.sh
sysroot/linux-x86_64/usr/lib/: ld-linux-x86-64.so.2  libBrokenLocale.so.1  libc.so.6  libc_malloc_debug.so.0  libm.so.6  libmvec.so.1  libnsl.so.1  libnss_compat.so.2  libnss_db.so.2  libnss_dns.so.2  libnss_files.so.2  libnss_hesiod.so.2  libutil.so.1
tools/: BUILD.bazel  debug-build.sh  image.bzl  kls-classpath  kls.bzl
tools/modules/: BUILD.bazel  cpp.MODULE.bazel  jvm.MODULE.bazel  oci.MODULE.bazel
tools/patches/: BUILD.bazel  rules_quarkus_starlark.patch  toolchains_llvm_bash.patch
tools/sysroot/: generate.sh
