platform(
    name = "rbe_linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:public"],
)

platform(
    name = "macos_x86_64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:public"],
)

platform(
    name = "macos_arm64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
    visibility = ["//visibility:public"],
)

load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
        "//src/...": "",
    },
)

load("//tools:kls.bzl", "kls_classpath", "kls_workspace")

kls_classpath(
    name = "kls_classpath",
    targets = [
        "//src/main/java:main",
        "//src/main/java:quarkus_app",
        "//src/main/kotlin:main",
    ],
)

kls_workspace(
    name = "generate_workspace_json",
    targets = [
        "//src/main/java:main",
        "//src/main/java:quarkus_app",
        "//src/main/kotlin:main",
    ],
)


