module(
    name = "bazel_project",
    version = "1.0.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "toolchains_llvm", version = "1.8.0")
bazel_dep(name = "boost.algorithm", version = "1.83.0.bcr.1")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_kotlin", version = "2.4.0")
bazel_dep(name = "rules_jvm_external", version = "6.9")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")

# NixOS shebang compatibility patch
single_version_override(
    module_name = "toolchains_llvm",
    patch_strip = 1,
    patches = ["//patches:toolchains_llvm_bash.patch"],
    version = "1.8.0",
)

# Force googletest version with rules_cc compatibility patches
single_version_override(
    module_name = "googletest",
    version = "1.17.0.bcr.2",
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "20.1.0",
    cxx_builtin_include_directories = {
        "darwin-aarch64": [
            "/nix/store",
        ],
        "darwin-x86_64": [
            "/nix/store",
        ],
    },
)
use_repo(llvm, "llvm_toolchain")
register_toolchains("@llvm_toolchain//:all")

# Register the in-tree Linux sysroot for C++ actions targeting Linux
llvm.sysroot(
    name = "llvm_toolchain",
    label = "//sysroot/linux-x86_64:sysroot",
    targets = ["linux-x86_64"],
)

# Define Stringzilla external repository using the built-in HTTP archive repo rule
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "stringzilla",
    urls = ["https://github.com/ashvardanian/Stringzilla/archive/refs/tags/v4.6.2.tar.gz"],
    strip_prefix = "StringZilla-4.6.2",
    integrity = "sha256-6VC5U4OFj2Q9hQiOjusmvA7zLzybN6ZbXEmas6bFGXA=",
    build_file = "//third_party:stringzilla.BUILD",
)

# --- Compile commands for clangd (dev only) ---
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "1f9360db1834d115c48279d38a97f30d64d3fd4a",
    remote = "https://github.com/helly25/bazel-compile-commands-extractor.git",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "io.ktor:ktor-server-core-jvm:2.3.12",
        "io.ktor:ktor-server-netty-jvm:2.3.12",
        "io.ktor:ktor-server-host-common-jvm:2.3.12",
        "org.slf4j:slf4j-simple:2.0.13",
        # Quarkus
        "io.quarkus:quarkus-core:3.20.1",
        "io.quarkus:quarkus-arc:3.20.1",
        "io.quarkus:quarkus-arc-deployment:3.20.1",
        "io.quarkus:quarkus-rest:3.20.1",
        "io.quarkus:quarkus-rest-deployment:3.20.1",
        "io.quarkus:quarkus-vertx-http:3.20.1",
        "io.quarkus:quarkus-vertx-http-deployment:3.20.1",
        "jakarta.ws.rs:jakarta.ws.rs-api:4.0.0",
        "jakarta.enterprise:jakarta.enterprise.cdi-api:4.1.0",
        "jakarta.inject:jakarta.inject-api:2.0.1",
    ],
    excluded_artifacts = [
        "io.grpc:protoc-gen-grpc-java",
        "com.google.protobuf:protoc",
    ],
    fetch_sources = True,
)
use_repo(maven, "maven")

# Container/OCI rules
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_oci", version = "2.0.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_cc",
    digest = "sha256:d703b626ba455c4e6c6fbe5f36e6f427c85d51445598d564652a2f334179f96e",
    image = "gcr.io/distroless/cc-debian12",
    platforms = [
        "linux/amd64",
    ],
)
oci.pull(
    name = "distroless_java",
    digest = "sha256:f34fd3e4e2d7a246d764d0614f5e6ffb3a735930723fac4cfc25a72798950262",
    image = "gcr.io/distroless/java21-debian12",
    platforms = [
        "linux/amd64",
    ],
)
use_repo(oci, "distroless_cc", "distroless_cc_linux_amd64", "distroless_java", "distroless_java_linux_amd64")

# rules_quarkus setup
bazel_dep(name = "rules_quarkus", version = "0.2.0")
git_override(
    module_name = "rules_quarkus",
    remote = "https://github.com/kinhluan/rules_quarkus.git",
    tag = "v0.2.0",
    patches = ["//patches:rules_quarkus_starlark.patch"],
    patch_strip = 0,
)



