module(
    name = "bazel_project",
    version = "1.0.0",
)

bazel_dep(name = "platforms", version = "1.0.0")

# Include language and packaging definitions
include("//modules:cpp.MODULE.bazel")
include("//modules:jvm.MODULE.bazel")
include("//modules:go.MODULE.bazel")
include("//modules:rust.MODULE.bazel")
include("//modules:oci.MODULE.bazel")
