module(
    name = "bazel_project",
    version = "1.0.0",
)

bazel_dep(name = "platforms", version = "1.0.0")

# Include language and packaging definitions
include("//tools/modules:cpp.MODULE.bazel")
include("//tools/modules:jvm.MODULE.bazel")
include("//tools/modules:go.MODULE.bazel")
include("//tools/modules:rust.MODULE.bazel")
include("//tools/modules:oci.MODULE.bazel")
