load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "com/example/go",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "hello_go",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)
