load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("//tools:image.bzl", "go_image")


go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "com/example/go",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "hello_go",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_image(
    name = "hello_go_load",
    binary = ":hello_go",
    repo_tags = ["hello-go:latest"],
)

