load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_quarkus//quarkus:defs.bzl", "quarkus_application")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files", "strip_prefix")
load("//tools:image.bzl", "jvm_image", "quarkus_image")

java_binary(
    name = "main",
    srcs = ["com/example/Main.java"],
    main_class = "com.example.Main",
    visibility = ["//visibility:public"],
)

jvm_image(
    name = "main_load",
    deploy_jar = ":main_deploy.jar",
    repo_tags = ["java-main:latest"],
)

quarkus_application(
    name = "quarkus_app",
    srcs = ["com/example/QuarkusApp.java"],
    resources = ["//src/main/resources:resources"],
    visibility = ["//visibility:public"],
    main_class = "io.quarkus.runner.GeneratedMain",
    deps = [
        "@maven//:jakarta_ws_rs_jakarta_ws_rs_api",
        "@maven//:jakarta_enterprise_jakarta_enterprise_cdi_api",
        "@maven//:jakarta_inject_jakarta_inject_api",
        "@maven//:org_jboss_logging_jboss_logging",
    ],
    runtime_extensions = [
        "@maven//:io_quarkus_quarkus_arc",
        "@maven//:io_quarkus_quarkus_rest",
        "@maven//:io_quarkus_quarkus_vertx_http",
    ],
    deployment_extensions = [
        "@maven//:io_quarkus_quarkus_arc_deployment",
        "@maven//:io_quarkus_quarkus_rest_deployment",
        "@maven//:io_quarkus_quarkus_vertx_http_deployment",
    ],
)


pkg_files(
    name = "quarkus_jvm_files",
    srcs = [":quarkus_app_augmented"],
    prefix = "app",
    strip_prefix = strip_prefix.from_pkg("quarkus_app_augmented-quarkus-app"),
)

quarkus_image(
    name = "quarkus_jvm_load",
    repo_tags = ["quarkus-jvm:latest"],
    srcs = [":quarkus_jvm_files"],
)
