load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@rules_java//java:defs.bzl", "java_binary")
load("//tools:image.bzl", "jvm_image")

kt_jvm_library(
    name = "main_lib",
    srcs = ["src/com/example/Hello.kt"],
    resources = glob(["resources/**/*"]),
    resource_strip_prefix = "src/main/kotlin/resources",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:io_ktor_ktor_server_core_jvm",
        "@maven//:io_ktor_ktor_server_netty_jvm",
        "@maven//:io_ktor_ktor_server_host_common_jvm",
        "@maven//:org_slf4j_slf4j_simple",
    ],
)

java_binary(
    name = "main",
    main_class = "com.example.HelloKt",
    visibility = ["//visibility:public"],
    runtime_deps = [":main_lib"],
)

jvm_image(
    name = "main_load",
    deploy_jar = ":main_deploy.jar",
    repo_tags = ["kotlin-main:latest"],
)

